# AI

./: .gitmodules  README.md
LangChain/sourceCode/: .gitignore  1.openai.py  10.FewShotPromptTemplate.py  11.load_prompt.py  12.partial.py  13.combine.py  14.LengthBasedExampleSelector.py  15.MaxMarginalRelevanceExampleSelector.py  16.SemanticSimilarityExampleSelector.py  17.KeywordExampleSelector.py  18.StrOutputParser.py  19.JsonOutputParser.py  2.openai.py  20.PydanticOutputParser.py  21.OutputFixingParser.py  22.RetryOutputParser.py  23.BaseOutputParser.py  24.RunnableLambda.py  25.RunnableSequenc.py  26.RunnablePassthrough.py  27.RunnableParallel.py  28.RunnableBranch.py  29.with_retry.py  3.deepseek.py  30.config.py  31.configurable_fields.py  32.configurable_alternatives.py  33.InMemoryChatMessageHistory.py  34.RunnableWithMessageHistory.py  35.SQLChatMessageHistory.py  36.TextLoader.py  37.PDFLoader.py  38.Docx2txtLoader.py  39.WebBaseLoader.py  4.tongyi.py  40.CSVLoader.py  41.LineByLineLoader.py  42.CharacterTextSplitter.py  43.RecursiveCharacterTextSplitter.py  44.TokenTextSplitter.py  (+31 more)
LangChain/sourceCode/chroma_db/: chroma.sqlite3
LangChain/sourceCode/infer/: 1.dataclass.py  10.cross-encoder.py  11.cross-encoder.py  12.Lost-in-the-Middle.py  2.generic.js  2.generic.py  2.generic.ts  3.TF-IDF.py  4.search.py  5.归一化项公式.py  6.BM25.py  7.RRF.py  8.RRF.py  9.biencoder.py
LangChain/sourceCode/smartchain/: callbacks.py  chat_models.py  config.py  cross_encoders.py  documents.py  embeddings.py  example_selectors.py  messages.py  output_parsers.py  prompt_values.py  (+2 more)
(+70 files in other folders)
