[project]
name = "2-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.3.7",
    "dashscope>=1.25.2",
    "faiss-cpu>=1.13.1",
    "jieba>=0.42.1",
    "langchain>=1.1.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.0",
    "mysql-connector-python>=9.5.0",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "pypdf>=6.4.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
]
